tests/ui/allocator/dyn-incompatible.stderr
error[E0038]: the trait `Allocator` is not dyn compatible
  --> $DIR/dyn-incompatible.rs:7:32
   |
LL | fn ensure_dyn_incompatible(_: &dyn Allocator) {}
   |                                ^^^^^^^^^^^^^ `Allocator` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $SRC_DIR/core/src/alloc/mod.rs:LL:COL
   |
   = note: the trait is not dyn compatible because it opted out of dyn-compatibility

error[E0038]: the trait `Allocator` is not dyn compatible
  --> $DIR/dyn-incompatible.rs:11:29
   |
LL |     ensure_dyn_incompatible(&System);
   |                             ^^^^^^^ `Allocator` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $SRC_DIR/core/src/alloc/mod.rs:LL:COL
   |
   = note: the trait is not dyn compatible because it opted out of dyn-compatibility

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
